# text_to_speech_program

./: .gitignore  README.md  install_linux_service.sh  requirements.txt
doc/: CONFIGURE.md  INSTALL.md  README.md  TESTING.md  UPLOAD.md  USING.md
src/: README.md  pyproject.toml  toml_gen.py
src/text_to_speech_program/: about.py  client.py  config.py  server.py  work_audio.py
